Added travis + unit test with mocha + npm test
Put in place the unit test + CI environment.

--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "coffee-script": "",
     "less": ""
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "mocha": {}
+  },
+  "scripts": {
+    "test": "mocha"
+  }
 }
