added mocha as a normal dependency for now

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "wrench": "",
     "uglify-js": "",
     "coffee-script": "",
-    "less": ""
+    "less": "",
+    "mocha": ""
   },
   "devDependencies": {
     
