--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Patrick Brosset <patrickbrosset@gmail.com> (http://github.com/captainbrosset)",
   "name": "packman",
   "description": "text file packager tool",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "homepage": "http://github.com/captainbrosset/packman",
   "repository": {
     "type": "git",
@@ -25,10 +25,9 @@
     "less": "",
     "mocha": ""
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "./node_modules/.bin/mocha"
-  }
+  },
+  "optionalDependencies": {}
 }
