fix the version of js-yaml to 0.3.7 as latest 1.0.0 is failing to install

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "colors": "",
     "optimist": "",
-    "js-yaml": "",
+    "js-yaml": "0.3.7",
     "wrench": "",
     "uglify-js": "",
     "coffee-script": "",
