Introducing a new Stats visitor
The stats visitor simply generates an HTML report file about the source
folder, giving metrics about the number of lines of codes, number of
files, and types of files

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "uglify-js": "",
     "coffee-script": "",
     "less": "",
-    "mocha": ""
+    "mocha": "",
+    "bind": "0.1.5"
   },
   "devDependencies": {},
   "scripts": {
