--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "optimist": "",
     "js-yaml": "0.3.7",
     "wrench": "",
-    "uglify-js": "",
+    "uglify-js": "1.3.4",
     "coffee-script": "",
     "less": "",
     "mocha": "",
